MODSHSLIDE-197 #resolve #comment Adding new css for alignment

--- a/code/media/mod_jsshackslides/css/jsshackslides.css
+++ b/code/media/mod_jsshackslides/css/jsshackslides.css
@@ -196,26 +196,30 @@
 	pointer-events: initial;
 }
 .jss-slider .jss-navigation .jss-navigation-dots .owl-dot > div > span {
-	display: flex;
-	position: absolute;
-	width: 100%;
+	margin: 0;
 	height: 100%;
-	top: 0;
-	left: 0;
-	font-size: initial;
-	-webkit-justify-content: center;
-	-moz-justify-content: center;
-	-ms-justify-content: center;
-	-o-justify-content: center;
-	justify-content: center;
-	-ms-align-items: center;
+	width: 100%;
+	position: relative;
+	z-index: 1;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-align: center; -moz-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
 	align-items: center;
+	-webkit-box-pack: center; -moz-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	font-size: initial;
 	-webkit-pointer-events: initial;
 	-moz-pointer-events: initial;
 	-ms-pointer-events: initial;
 	-o-pointer-events: initial;
 	pointer-events: initial;
-	z-index: 30;
 }
 .jss-slider .jss-navigation .jss-navigation-buttons {
 	text-align: center;
